# llm_proj

./: .env  .gitignore  main.py  pyproject.toml
ch02/: main2.py  main3.ipynb
ch04/: pdf_to_txt.py
ch04/output/: 한국은행 5월 경제전망보고서_with_preprocessing.txt
ch05/: openai_api_whisper.ipynb
code/ch01/: gpt_basic.py
code/ch02/: main3.ipynb
code/ch04/: summary.py  text_preprocessing.py
code/ch04/output/: summary.txt
code/ch05/: audio.rttm  openai_api_whisper.ipynb  summarize_and_correct.ipynb  whisper_stt.py
code/ch05/output/: audio_corrected_note.md  audio_note_correction.json  audio_to_stt.csv  diarization_output.csv  final_output.csv  summary.md  녹취록 요약본.docx
code/ch06/: image_explanation.ipynb  image_quiz.py  quiz.ipynb  tts.ipynb
code/ch06/output/: image_quiz.md  image_quiz_eng.json
code/ch07/: function_calling.py  get_time.py  gpt_finance.py  yfinance.ipynb
code/ch07/output/: recommendations_TSLA
code/llm_proj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
