[project]
name = "llm-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "load-dotenv>=0.1.0",
    "openai>=1.96.1",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "streamlit==1.25.0",
    "transformers>=4.54.0",
    "torch >= 2.7.1",
    "torchaudio >= 2.7.1",
    "torchvision >= 0.22.1",
    "python-docx>=1.2.0",
    "ipython>=9.4.0",
]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["code"] } }
